--- a/gallereya.css
+++ b/gallereya.css
@@ -6,7 +6,8 @@
     margin: 2;
     padding: 2;
 }
-/* Стиль для заголовка */
+
+/* Стиль для страницы */
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -15,34 +16,64 @@ body {
 }
 
 /* Стиль для Названия сайта */
-h2.title:before{
-    content: "";
-    position: absolute;
-    width: 1920px;
-    height: 5px;
-    background-color: #ffffff;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-h2.title{
+.title{
     font-family: 'Montserrat', sans-serif;
     font-size: 44px;
     font-weight: bold;
     text-align: center;
-    padding-bottom: 45px;
     position: relative;
+    padding: 0px;
 }
 
-h2.title:after{
-    content: "";
-    position: absolute;
-    width: 1920px;
-    height: 5px;
-    background-color: #ffffff;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+.title > * {
+    font-size: 5rem;
+    font-weight: 700;
+}
+
+.title > :last-child {
+    transform: 
+        rotatex(180deg)
+        translatey(28px);
+    mask-image: 
+        linear-gradient(
+            transparent 50%,
+            white 90%
+        );
+    -webkit-mask-image:
+        linear-gradient(
+            transparent 50%,
+            white 90%
+        );
+    opacity: 0.6;
+}
+
+/* Стиль для текста перед картинками на главной странице */
+.reflected {
+    display: inline-block;
+    width: max-content;
+    padding: 0 10px;
+}
+
+.reflected > * {
+    font-size: 5rem;
+    font-weight: 150;
+}
+
+.reflected > :last-child {
+    transform: 
+        rotatex(180deg)
+        translatey(28px);
+    mask-image: 
+        linear-gradient(
+            transparent 50%,
+            white 90%
+        );
+    -webkit-mask-image:
+        linear-gradient(
+            transparent 50%,
+            white 90%
+        );
+    opacity: 0.72;
 }
 
 /* Картинки в слайдах */
@@ -74,12 +105,6 @@ h2.title:after{
     background-color: #925a1d;
 }
 
-.column >  img{
-    height: 20%;
-}
-.column >  img:hover{
-    opacity: 0.6;
-}
 .next {
     right: 0;
     border-radius: 10px 10px 10px 10px;
@@ -100,15 +125,36 @@ h2.title:after{
 
 /*кнопка начать и остановить*/
 button {
-    background-color: FFF;
-    font-size: 2em;
-    color: #ffffff;
-    border-radius: 2px;
-    display: none;
-    margin: 5px;
+    color: white;
+    margin-left: 20px;
+    padding: 15px 20px;
+    background: #b17a5c;
+    border-radius: 3px;
+    border: none;
+    border: #ffffff;
+    border-width: 5px;
+    border-style:double;
+}
+  
+button:hover {
+      background: rgb(68, 32, 12);
+      transform: scale(1.3);            
+      transition: transform 50ms cubic-bezier(0.07, 0.76, 0.93, 0.59) 0.1s, background 50ms ease-in-out 0.1s;
 }
 
 /* Колонка */
+.column >  img{
+    height: 20%;
+    transition: transform 0.25s
+    border-radius 20px 20px 20px 20px;
+}
+
+.column >  img:hover{
+    opacity: 0.6;
+    transform: scale(1.1);
+    border-radius: 20px 20px 20px 20px;
+}
+
 .column-item {
     padding: 5px;
     position: relative;
@@ -124,11 +170,15 @@ button {
 }
 
 /* Кнопка "Закрытие" */
-span {
+#toggler {
+    display: none;
+}
+
+#closebtn{
     color: rgb(255, 255, 255);
     font-size: 80px;
     cursor: pointer;
-    display: none;
+    display: block;
     float: right;
 }
 
@@ -142,6 +192,12 @@ input[type=range] {
 .footer {
     font-style: italic;
     background-color: #6b4015;
-    position: static;
+    text-align: center;
+    height: 60px;
+    line-height: 60px;
+    padding-right: 40px;
+    position: fixed;
     bottom: 0;
+    left: 0;
+    right: 0;
 }
